--- a/code/mage-spark/afcon_de_project/metadata.yaml
+++ b/code/mage-spark/afcon_de_project/metadata.yaml
@@ -21,27 +21,28 @@ emr_config:
 
 spark_config:
   # Application name
-  app_name: 'afcon_2023_spark'
+  app_name: 'test_spark'
   # Master URL to connect to
   # e.g., spark_master: 'spark://host:port', or spark_master: 'yarn'
-  spark_master: 'local'
+  spark_master: 'spark://de-zoomcamp.europe-west1-b.c.primeval-legacy-412013.internal:7077'
   # Executor environment variables
   # e.g., executor_env: {'PYTHONPATH': '/home/path'}
-  executor_env: {'PYTHONPATH:/home/abdol/spark/spark-3.3.2-bin-hadoop3//python/lib/py4j-0.10.9.5-src.zip'}
+  executor_env: {}
   # Jar files to be uploaded to the cluster and added to the classpath
   # e.g., spark_jars: ['/home/path/example1.jar']
-  spark_jars: []
+  spark_jars: ['/home/src/gcp_jars/gcs-connector-hadoop3-2.2.5.jar', '/home/src/gcp_jars/spark-3.3-bigquery-0.36.1.jar']
   # Path where Spark is installed on worker nodes
   # e.g. spark_home: '/usr/lib/spark'
-  spark_home: '/home/abdol/spark/spark-3.3.2-bin-hadoop3'
+  spark_home: ''
   # List of key-value pairs to be set in SparkConf
   # e.g., others: {'spark.executor.memory': '4g', 'spark.executor.cores': '2'}
-  others: {'spark.executor.memory': '4g', 'spark.executor.cores': '2'}
+  others: {}
   # Whether to create custom SparkSession via code and set in kwargs['context']
   use_custom_session: true
   # The variable name to set in kwargs['context'],
   # e.g. kwargs['context']['spark'] = spark_session
   custom_session_var_name: 'spark'
+
 
 notification_config:
   alert_on:
@@ -51,5 +52,5 @@ notification_config:
     webhook_url: "{{ env_var('MAGE_SLACK_WEBHOOK_URL') }}"
   teams_config:
     webhook_url: "{{ env_var('MAGE_TEAMS_WEBHOOK_URL') }}"
-project_uuid: 7baa509cde5f4d9c8cceadc33f8bc00d
+project_uuid: d6533319e67b42ada3af9de52622802e
 help_improve_mage: true
