--- a/code/mage-spark/afcon_de_project/pipelines/test_spark_pipeline/metadata.yaml
+++ b/code/mage-spark/afcon_de_project/pipelines/test_spark_pipeline/metadata.yaml
@@ -7,43 +7,13 @@ blocks:
   executor_type: local_python
   has_callback: false
   language: python
-  name: create spark session
+  name: test_spark_load
   retry_config: null
   status: updated
-  timeout: null
-  type: scratchpad
-  upstream_blocks: []
-  uuid: create_spark_session
-- all_upstream_blocks_executed: true
-  color: null
-  configuration: {}
-  downstream_blocks: []
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: test_load_pyspark
-  retry_config: null
-  status: failed
   timeout: null
   type: data_loader
   upstream_blocks: []
-  uuid: test_load_pyspark
-- all_upstream_blocks_executed: true
-  color: null
-  configuration: {}
-  downstream_blocks: []
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: stop spark session
-  retry_config: null
-  status: updated
-  timeout: null
-  type: scratchpad
-  upstream_blocks: []
-  uuid: stop_spark_session
+  uuid: test_spark_load
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
