--- a/images/mage-spark/Dockerfile
+++ b/images/mage-spark/Dockerfile
@@ -14,4 +14,4 @@ RUN rm /etc/apt/sources.list.d/bullseye.list
 RUN ${PIP} install pyspark
 RUN ${PIP} install statsbombpy
 
-ENV MAGE_DATA_DIR=
+# ENV MAGE_DATA_DIR=
