--- a/mage/data_engineering_afcon_2023/pipelines/transform_and_dwh_modeling_afcon/metadata.yaml
+++ b/mage/data_engineering_afcon_2023/pipelines/transform_and_dwh_modeling_afcon/metadata.yaml
@@ -2,14 +2,15 @@ blocks:
 - all_upstream_blocks_executed: true
   color: blue
   configuration: {}
-  downstream_blocks: []
+  downstream_blocks:
+  - load_matches_events_files_into_bq_tables
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: spark_session_creation
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: custom
   upstream_blocks: []
@@ -17,7 +18,8 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration: {}
-  downstream_blocks: []
+  downstream_blocks:
+  - trigger_pipeline_matches
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -27,8 +29,25 @@ blocks:
   status: executed
   timeout: null
   type: data_loader
-  upstream_blocks: []
+  upstream_blocks:
+  - spark_session_creation
   uuid: load_matches_events_files_into_bq_tables
+- all_upstream_blocks_executed: true
+  color: null
+  configuration: {}
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: trigger_pipeline_matches
+  retry_config: null
+  status: executed
+  timeout: null
+  type: data_loader
+  upstream_blocks:
+  - load_matches_events_files_into_bq_tables
+  uuid: trigger_pipeline_matches
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
