--- a/mage/data_engineering_afcon_2023/pipelines/elt_afcon/metadata.yaml
+++ b/mage/data_engineering_afcon_2023/pipelines/elt_afcon/metadata.yaml
@@ -18,7 +18,8 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration: {}
-  downstream_blocks: []
+  downstream_blocks:
+  - trigger_build_dwh_models_pipeline
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -31,6 +32,22 @@ blocks:
   upstream_blocks:
   - extract_afcon_data_from_statsbomb
   uuid: load_afcon_events_to_datalake
+- all_upstream_blocks_executed: true
+  color: null
+  configuration: {}
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: trigger_build_dwh_models_pipeline
+  retry_config: null
+  status: executed
+  timeout: null
+  type: data_loader
+  upstream_blocks:
+  - load_afcon_events_to_datalake
+  uuid: trigger_build_dwh_models_pipeline
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
