--- a/mage/data_engineering_afcon_2023/pipelines/example_pipeline/metadata.yaml
+++ b/mage/data_engineering_afcon_2023/pipelines/example_pipeline/metadata.yaml
@@ -10,12 +10,12 @@ blocks:
   language: python
   name: load_titanic
   retry_config: null
-  status: not_executed
+  status: executed
   timeout: null
   type: data_loader
   upstream_blocks: []
   uuid: load_titanic
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration: {}
   downstream_blocks:
@@ -26,13 +26,13 @@ blocks:
   language: python
   name: fill_in_missing_values
   retry_config: null
-  status: not_executed
+  status: executed
   timeout: null
   type: transformer
   upstream_blocks:
   - load_titanic
   uuid: fill_in_missing_values
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration: {}
   downstream_blocks: []
@@ -42,7 +42,7 @@ blocks:
   language: python
   name: export_titanic_clean
   retry_config: null
-  status: not_executed
+  status: executed
   timeout: null
   type: data_exporter
   upstream_blocks:
